# deepdct-vo

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: kitti.yaml  model.yaml  train.yaml
deepdct/geometry/: dct_labels.py  se3.py
deepdct/models/: __init__.py  attention.py  blocks.py  decoder.py  deepdct_vo.py  deepdct_vo_legacy.py  encoder.py  pose_head.py
deepdct/models/auxiliary/: __init__.py  lite_mono.py  lraspp.py  lraspp_fig2.py
deepdct/models/auxiliary/lite_mono_vendor/: __init__.py
deepdct/models/auxiliary/lite_mono_vendor/networks/: __init__.py  depth_decoder.py  depth_encoder.py  lite_mono.py
deepdct/training/: __init__.py  train_one_epoch.py  validate_one_epoch.py
experiments/configs/: multisequence_baseline.json  single_sequence_baseline.json
scripts/: analyze_dataset_statistics.py  eval.py  evaluate_deepdct_vo.py  generate_kitti_dct_labels.py  infer_pair.py  run_reproducible_experiment.py  smoke_test_training_dataset.py  train.py  train_deepdct_vo.py
tests/: test_dct_label_generation.py  test_decoder_shapes.py  test_deepdct_forward.py  test_encoder_shapes.py  test_kitti_dataset.py  test_pose_head.py  test_se3_geometry.py
tests/geometry/: test_project_to_so3.py  test_rotation_sqrt.py
tests/models/: test_aresunet_forward.py  test_attention_block.py  test_decoder_shapes.py  test_deepdct_forward.py  test_encoder_shapes.py  test_lite_mono.py  test_lraspp_fig2.py  test_pose_head.py
tests/training/: test_loss_backward.py  test_single_batch_training_step.py
